<resources>
    <string name="app_name">Multi Purpose App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShadeSlayer1467</string>
    <string name="nav_header_subtitle">shadeslayer1467@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>menu_stopwatch
    <string name="menu_todoapp">Task List</string>
    <string name="menu_Clock">Clock</string>
    <string name="menu_Activity">Activity Tracker</string>
    <string name="menu_ActivityView">View Activity</string>

    <string name="todoText">Tasks</string>

    <!-- Clock Fragment-->
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="menu_timer">Timer</string>

    <string name="clockTimerReset">Reset Timer</string>
    <string name="clockTimerStart">Start Timer</string>
    <string name="clockTimerPause">Pause Timer</string>

    <string name="clockStopwatchReset">Reset</string>
    <string name="clockStopwatchStart">Start</string>
    <string name="clockStopwatchStop">Stop</string>

    <!-- Activity Fragment-->
    <string name="activityText">Activities</string>
</resources>