<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_todoapp">

    <!--<fragment
        android:id="@+id/nav_home"
        android:name="com.github.shadeslayer1467.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.github.shadeslayer1467.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.github.shadeslayer1467.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />-->

    <fragment
        android:id="@+id/nav_todoapp"
        android:name="com.github.shadeslayer1467.ui.todoapp.ToDoApp"
        android:label="@string/menu_todoapp"
        tools:layout="@layout/fragment_todo" />
    <fragment
        android:id="@+id/nav_Clock"
        android:name="com.github.shadeslayer1467.ui.clock.ClockFragment"
        android:label="@string/menu_Clock"
        tools:layout="@layout/fragment_clock" />
    <fragment
        android:id="@+id/nav_HobbyTracker"
        android:name="com.github.shadeslayer1467.ui.activitytracker.ActivityTracker"
        android:label="@string/menu_Activity"
        tools:layout="@layout/fragment_activitytracker" >

        <action
            android:id="@+id/action_activityTracker_to_viewActivity"
            app:destination="@id/viewActivityFragment" />

        <action
            android:id="@+id/action_activityTracker_to_addEditActivityDialog"
            app:destination="@id/addEditActivityDialog"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/viewActivityFragment"
        android:name="com.github.shadeslayer1467.ui.activitytracker.ViewActivityFragment"
        android:label="@string/menu_ActivityView"
        tools:layout="@layout/fragment_activitytracker_session_views"/>
    <dialog
        android:id="@+id/addEditActivityDialog"
        android:name="com.github.shadeslayer1467.ui.activitytracker.AddNewActivityFragment"
        tools:layout="@layout/fragment_activitytracker_activity_add">
        <argument
            android:name="activity"
            app:argType="com.github.shadeslayer1467.ui.activitytracker.models.EventModel"/>
    </dialog>
</navigation>