<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.clock.StopwatchFragment">

    <TextView
        android:id="@+id/clockStopwatchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20px"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/clockStopwatchButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_below="@+id/clockStopwatchTextView"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clockStopwatchReset"
            android:text="@string/clockStopwatchReset"
            app:icon="@drawable/ic_baseline_refresh_24"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clockStopwatchStart"
            android:text="@string/clockStopwatchStart"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clockStopwatchStop"
            android:text="@string/clockStopwatchStop"
            app:icon="@drawable/ic_baseline_stop_24"
            android:enabled="false"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:id="@+id/clockStopwatchLVTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clockStopwatchButtonLayout"
        android:layout_marginTop="10dp"/>
</RelativeLayout>